# vinit

./: .gitignore  Makefile  Makefile.in  README  config.status  configure  configure.ac  link-x86_64.ld  vinit
src/: main.c
