AC_INIT([vinit], [0.0.1], [ian@mkall.org])

CFLAGS_X86_64="-Werror=implicit -Werror=implicit-function-declaration \\
	-Werror=implicit-int -Werror=int-conversion \\
	-Werror=incompatible-pointer-types -Werror=int-to-pointer-cast \\
	-Werror=return-type -Wunused -pedantic"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
